[package]
name = "get-droned"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/tuo-progetto"

[features]
log = []

[dependencies]
toml = "0.8.19"
serde = { version = "1.0.214", features = ["derive"] }
crossbeam-channel = "0.5.13"
rand = "0.8.5"
flexi_logger = "0.29.6"
log = "0.4"
egui = "0.21"
eframe = "0.21"
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
